syntax.output
Terminals unused in grammar

    NEG


State 25 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier ExtDecList
    6       | Specifier SEMI
    7       | Specifier
    8       | Specifier FunDec CompSt
    9       | error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | ID LP error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | Exp
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | RETURN
   36     | IF LP Exp RP Stmt
   37     | IF error RP Stmt
   38     | IF LP error Stmt
   39     | IF LP Exp RP Stmt ELSE Stmt
   40     | IF error RP Stmt ELSE Stmt
   41     | IF LP error Stmt ELSE Stmt
   42     | ELSE error
   43     | WHILE LP Exp RP Stmt
   44     | WHILE error RP Stmt
   45     | WHILE LP error Stmt
   46     | STAR
   47     | error SEMI

   48 DefList: Def DefList
   49        | %empty

   50 Def: Specifier DecList SEMI
   51    | Specifier DecList
   52    | error SEMI

   53 DecList: Dec
   54        | Dec COMMA DecList

   55 Dec: VarDec
   56    | VarDec ASSIGNOP Exp

   57 Exp: Exp ASSIGNOP Exp
   58    | Exp AND Exp
   59    | Exp OR Exp
   60    | Exp RELOP Exp
   61    | Exp PLUS Exp
   62    | Exp MINUS Exp
   63    | Exp STAR Exp
   64    | Exp DIV Exp
   65    | LP Exp RP
   66    | MINUS Exp
   67    | NOT Exp
   68    | ID LP Args RP
   69    | ID LP RP
   70    | Exp LB Exp RB
   71    | Exp LB error RB
   72    | Exp DOT ID
   73    | ID
   74    | INT
   75    | FLOAT

   76 Args: Exp COMMA Args
   77     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 9 21 24 37 38 40 41 42 44 45 47 52 71
    MISSERROR (258)
    RETURN (259) 34 35
    IF (260) 36 37 38 39 40 41
    ELSE (261) 39 40 41 42
    WHILE (262) 43 44 45
    TYPE (263) 12
    LC (264) 14 28
    RC (265) 14 28
    STRUCT (266) 14 15
    COMMA (267) 11 25 54 76
    SEMI (268) 4 6 9 31 34 47 50 52
    ID (269) 16 18 19 22 23 24 68 69 72 73
    INT (270) 20 74
    FLOAT (271) 75
    ASSIGNOP (272) 56 57
    OR (273) 59
    AND (274) 58
    RELOP (275) 60
    PLUS (276) 61
    MINUS (277) 62 66
    STAR (278) 46 63
    DIV (279) 64
    NOT (280) 67
    NEG (281)
    LP (282) 22 23 24 36 38 39 41 43 45 65 68 69
    RP (283) 22 23 24 36 37 39 40 43 44 65 68 69
    LB (284) 20 21 70 71
    RB (285) 20 21 70 71
    DOT (286) 72
    LOWER_THAN_ELSE (287)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    Program (34)
        on left: 1
        on right: 0
    ExtDefList (35)
        on left: 2 3
        on right: 1 2
    ExtDef (36)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList (37)
        on left: 10 11
        on right: 4 5 11
    Specifier (38)
        on left: 12 13
        on right: 4 5 6 7 8 27 50 51
    StructSpecifier (39)
        on left: 14 15
        on right: 13
    OptTag (40)
        on left: 16 17
        on right: 14
    Tag (41)
        on left: 18
        on right: 15
    VarDec (42)
        on left: 19 20 21
        on right: 10 11 20 21 27 55 56
    FunDec (43)
        on left: 22 23 24
        on right: 8
    VarList (44)
        on left: 25 26
        on right: 22 25
    ParamDec (45)
        on left: 27
        on right: 25 26
    CompSt (46)
        on left: 28
        on right: 8 33
    StmtList (47)
        on left: 29 30
        on right: 28 29
    Stmt (48)
        on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 29 36 37 38 39 40 41 43 44 45
    DefList (49)
        on left: 48 49
        on right: 14 28 48
    Def (50)
        on left: 50 51 52
        on right: 48
    DecList (51)
        on left: 53 54
        on right: 50 51 54
    Dec (52)
        on left: 55 56
        on right: 53 54
    Exp (53)
        on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 31 32 34 36 39 43 56 57 58 59 60 61 62 63 64 65 66 67 70 71 72 76 77
    Args (54)
        on left: 76 77
        on right: 68 76


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    9 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . ExtDecList
    6       | Specifier . SEMI
    7       | Specifier .
    8       | Specifier . FunDec CompSt

    SEMI  shift, and go to state 15
    ID    shift, and go to state 16

    $default  reduce using rule 7 (ExtDef)

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    9 ExtDef: error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 10

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 11

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 20


State 12

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 16

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP
   24       | ID . LP error RP

    LP  shift, and go to state 21

    $default  reduce using rule 19 (VarDec)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI
    5       | Specifier ExtDecList .

    SEMI  shift, and go to state 22

    $default  reduce using rule 5 (ExtDef)


State 18

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 10 (ExtDecList)


State 19

    8 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 20

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 49 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 29
    Def              go to state 30


State 21

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP
   24       | ID LP . error RP

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 32

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 18


State 24

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . error RB

    error  shift, and go to state 38
    INT    shift, and go to state 39


State 25

   28 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 49 (DefList)]
    RETURN  reduce using rule 49 (DefList)
    IF      reduce using rule 49 (DefList)
    ELSE    reduce using rule 49 (DefList)
    WHILE   reduce using rule 49 (DefList)
    LC      reduce using rule 49 (DefList)
    RC      reduce using rule 49 (DefList)
    ID      reduce using rule 49 (DefList)
    INT     reduce using rule 49 (DefList)
    FLOAT   reduce using rule 49 (DefList)
    MINUS   reduce using rule 49 (DefList)
    STAR    reduce using rule 49 (DefList)
    NOT     reduce using rule 49 (DefList)
    LP      reduce using rule 49 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 40
    Def              go to state 30


State 26

    8 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 8 (ExtDef)


State 27

   52 Def: error . SEMI

    SEMI  shift, and go to state 41


State 28

   50 Def: Specifier . DecList SEMI
   51    | Specifier . DecList

    ID  shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 29

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


State 30

   48 DefList: Def . DefList

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 49 (DefList)]
    RETURN  reduce using rule 49 (DefList)
    IF      reduce using rule 49 (DefList)
    ELSE    reduce using rule 49 (DefList)
    WHILE   reduce using rule 49 (DefList)
    LC      reduce using rule 49 (DefList)
    RC      reduce using rule 49 (DefList)
    ID      reduce using rule 49 (DefList)
    INT     reduce using rule 49 (DefList)
    FLOAT   reduce using rule 49 (DefList)
    MINUS   reduce using rule 49 (DefList)
    STAR    reduce using rule 49 (DefList)
    NOT     reduce using rule 49 (DefList)
    LP      reduce using rule 49 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 30


State 31

   24 FunDec: ID LP error . RP

    RP  shift, and go to state 47


State 32

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 33

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 48


State 34

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 35

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 26 (VarList)


State 36

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 37

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 38

   21 VarDec: VarDec LB error . RB

    RB  shift, and go to state 51


State 39

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


State 40

   28 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 53
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    ELSE    shift, and go to state 56
    WHILE   shift, and go to state 57
    LC      shift, and go to state 25
    ID      shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    MINUS   shift, and go to state 61
    STAR    shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


State 41

   52 Def: error SEMI .

    $default  reduce using rule 52 (Def)


State 42

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   55 Dec: VarDec .
   56    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 69
    LB        shift, and go to state 24

    $default  reduce using rule 55 (Dec)


State 43

   50 Def: Specifier DecList . SEMI
   51    | Specifier DecList .

    SEMI  shift, and go to state 70

    $default  reduce using rule 51 (Def)


State 44

   53 DecList: Dec .
   54        | Dec . COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 53 (DecList)


State 45

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 46

   48 DefList: Def DefList .

    $default  reduce using rule 48 (DefList)


State 47

   24 FunDec: ID LP error RP .

    $default  reduce using rule 24 (FunDec)


State 48

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 27 (ParamDec)


State 49

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 50

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 72
    ParamDec         go to state 35


State 51

   21 VarDec: VarDec LB error RB .

    $default  reduce using rule 21 (VarDec)


State 52

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 53

   47 Stmt: error . SEMI

    SEMI  shift, and go to state 73


State 54

   34 Stmt: RETURN . Exp SEMI
   35     | RETURN .

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    $default  reduce using rule 35 (Stmt)

    Exp  go to state 74


State 55

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . error RP Stmt
   38     | IF . LP error Stmt
   39     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . error RP Stmt ELSE Stmt
   41     | IF . LP error Stmt ELSE Stmt

    error  shift, and go to state 75
    LP     shift, and go to state 76


State 56

   42 Stmt: ELSE . error

    error  shift, and go to state 77


State 57

   43 Stmt: WHILE . LP Exp RP Stmt
   44     | WHILE . error RP Stmt
   45     | WHILE . LP error Stmt

    error  shift, and go to state 78
    LP     shift, and go to state 79


State 58

   68 Exp: ID . LP Args RP
   69    | ID . LP RP
   73    | ID .

    LP  shift, and go to state 80

    $default  reduce using rule 73 (Exp)


State 59

   74 Exp: INT .

    $default  reduce using rule 74 (Exp)


State 60

   75 Exp: FLOAT .

    $default  reduce using rule 75 (Exp)


State 61

   66 Exp: MINUS . Exp

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 81


State 62

   46 Stmt: STAR .

    $default  reduce using rule 46 (Stmt)


State 63

   67 Exp: NOT . Exp

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 82


State 64

   65 Exp: LP . Exp RP

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 83


State 65

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 66

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 84


State 67

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 53
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    ELSE    shift, and go to state 56
    WHILE   shift, and go to state 57
    LC      shift, and go to state 25
    ID      shift, and go to state 58
    INT     shift, and go to state 59
    FLOAT   shift, and go to state 60
    MINUS   shift, and go to state 61
    STAR    shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 85
    Stmt      go to state 67
    Exp       go to state 68


State 68

   31 Stmt: Exp . SEMI
   32     | Exp .
   57 Exp: Exp . ASSIGNOP Exp
   58    | Exp . AND Exp
   59    | Exp . OR Exp
   60    | Exp . RELOP Exp
   61    | Exp . PLUS Exp
   62    | Exp . MINUS Exp
   63    | Exp . STAR Exp
   64    | Exp . DIV Exp
   70    | Exp . LB Exp RB
   71    | Exp . LB error RB
   72    | Exp . DOT ID

    SEMI      shift, and go to state 86
    ASSIGNOP  shift, and go to state 87
    OR        shift, and go to state 88
    AND       shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    LB        shift, and go to state 95
    DOT       shift, and go to state 96

    $default  reduce using rule 32 (Stmt)


State 69

   56 Dec: VarDec ASSIGNOP . Exp

    ID     shift, and go to state 58
    INT    shift, and go to state 59
    FLOAT  shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 63
    LP     shift, and go to state 64

    Exp  go to state 97


State 70

   50 Def: Specifier DecList SEMI .

    $default  reduce using rule 50 (Def)


State 71

   54 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 98
    Dec      go to state 44


State 72

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 73
